Add Logout and register API Documentation
